<?xml version="1.0" encoding="utf-8"?>

<!--REZA A MARDIANSYAH-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/incredibles">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_image"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/superheroImage"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@drawable/dash"
                android:contentDescription="@string/superhero_dash"
                app:layout_constraintTop_toTopOf="@id/cd_image"
                app:layout_constraintStart_toStartOf="@id/cd_image"
                app:layout_constraintEnd_toEndOf="@id/cd_image"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_image"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/superheroName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:contentDescription="@string/nama_superhero"
                android:text="@string/nama_superhero"
                android:fontFamily="@font/hero"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/cd_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cd_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_name"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/biography_superhero"
                android:textColor="@color/white"
                android:fontFamily="@font/hero"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/superheroBiography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero"
                android:contentDescription="@string/isi_data_biography_superhero"
                android:text="@string/isi_data_biography_superhero"
                android:layout_marginTop="40dp"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:textSize="12sp"
                android:textColor="@color/white"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cd_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_bio"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/powerstats"
                android:fontFamily="@font/hero"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/superheroDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/hero"
                android:contentDescription="@string/isi_data_powerstats_superhero"
                android:text="@string/isi_data_powerstats_superhero"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/cd_bio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cd_family"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            app:cardCornerRadius="20dp"-->
<!--            app:cardBackgroundColor="#80000000"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/cd_power"-->
<!--            app:layout_constraintEnd_toEndOf="parent">-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:text="@string/family"-->
<!--                android:fontFamily="@font/hero"-->
<!--                android:textColor="@color/white"-->
<!--                android:textAlignment="center"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="24sp"/>-->
<!--            <TextView-->
<!--                android:id="@+id/superheroFamily"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="40dp"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:fontFamily="@font/hero"-->
<!--                android:contentDescription="@string/isi_data_family_superhero"-->
<!--                android:text="@string/isi_data_family_superhero"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="12sp"-->
<!--                android:textColor="@android:color/white"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/cd_bio"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--        </androidx.cardview.widget.CardView>-->
        <TextView
            android:id="@+id/kelas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/pemrograman_android_3"
            android:fontFamily="@font/hero"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/cd_power"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reza_a_mardiansyah_10121282"
            android:fontFamily="@font/hero"
            android:textStyle="italic"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/kelas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>